...
                                        <rect key="frame" x="0.0" y="158" width="352" height="21"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aTM-Ys-mDE" userLabel="Label a">
                                                <rect key="frame" x="45" y="0.0" width="14" height="21"/>
                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gc2-nH-wJG" userLabel="Coef a">
                                                <rect key="frame" x="70" y="-6.5" width="262" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="coefATextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bzs-Y0-Yzc" userLabel="Coef b">
                                                <rect key="frame" x="70" y="-6.5" width="262" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="coefBTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w44-4f-wlN" userLabel="Coef c">
                                                <rect key="frame" x="70" y="-7" width="262" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="coefCTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="310.5" width="352" height="35"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WQk-Q6-S8f" userLabel="Resolver">
                                                <rect key="frame" x="123" y="10.5" width="106" height="14"/>
                                                <state key="normal" title="Resolver"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ev0-Qf-ej9" userLabel="RaizUno">
                                                <rect key="frame" x="105" y="-6.5" width="227" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="raizUnoTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8NT-Nc-COK" userLabel="RaizDos">
                                                <rect key="frame" x="105" y="-7" width="227" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="raizDosTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
